Add support for go 1.9 t.Helper() method
See https://golang.org/pkg/testing/#T.Helper for documentation of this new method.

On go >= 1.9 this allows to mark assert/require functions as test helper functions and get the proper trace without further work.

On go < 1.9 the previous behaviour (manual computation of caller info, added to the message log) is kept.

--- a/assert/assertion_format.go.tmpl
+++ b/assert/assertion_format.go.tmpl
@@ -1,4 +1,8 @@
 {{.CommentFormat}}
 func {{.DocInfo.Name}}f(t TestingT, {{.ParamsFormat}}) bool {
+	if t, ok := t.(helper); ok {
+		t.Helper()
+	}
+
 	return {{.DocInfo.Name}}(t, {{.ForwardedParamsFormat}})
 }
