--- a/require/require.go.tmpl
+++ b/require/require.go.tmpl
@@ -1,5 +1,9 @@
 {{.Comment}}
 func {{.DocInfo.Name}}(t TestingT, {{.Params}}) {
+	if t, ok := t.(helper); ok {
+		t.Helper()
+	}
+
 	if !assert.{{.DocInfo.Name}}(t, {{.ForwardedParams}}) {
 		t.FailNow()
 	}
