--- a/assert/assertion_forward.go.tmpl
+++ b/assert/assertion_forward.go.tmpl
@@ -1,4 +1,8 @@
 {{.CommentWithoutT "a"}}
 func (a *Assertions) {{.DocInfo.Name}}({{.Params}}) bool {
+	if t, ok := a.t.(helper); ok {
+		t.Helper()
+	}
+
 	return {{.DocInfo.Name}}(a.t, {{.ForwardedParams}})
 }
