--- a/require/require_forward.go.tmpl
+++ b/require/require_forward.go.tmpl
@@ -1,4 +1,8 @@
 {{.CommentWithoutT "a"}}
 func (a *Assertions) {{.DocInfo.Name}}({{.Params}}) {
+	if t, ok := a.t.(helper); ok {
+		t.Helper()
+	}
+
 	{{.DocInfo.Name}}(a.t, {{.ForwardedParams}})
 }
